<resources>
    <string name="app_name">ShizuTools</string>
    <string name="this_app_requires_u_shizuku">This app requires <u>Shizuku</u>.\nPlease make sure you have shizuku installed and running.</string>
    <string name="force_applying_mixedaudio_may_crash">Force applying MixedAudio may crash some apps, and doing so on system apps may crash your entire system.</string>
    <string name="debloater">Debloater</string>
    <string name="themepatcher">ThemePatcher</string>
    <string name="lookback">LookBack</string>
    <string name="mixedaudio">MixedAudio</string>
    <string name="localshell">LocalShell</string>
    <string name="intent_shell">IntentShell</string>
    <string name="desc_intent_shell">Execute raw adb commands, on-demand through intents.</string>
    <string name="desc_adb_shell">Locally execute raw adb commands.</string>
    <string name="desc_mixedaudio">Allow multiple apps to play audio at the same time, or mute specific apps.</string>
    <string name="desc_lookback">Seamlessly downgrade apps to older versions, without re-install.</string>
    <string name="desc_themepatcher">Use premium themes from the theme store in oppo, oneplus or realme devices for free.</string>
    <string name="desc_debloater">Uninstall unnecessary system apps to remove ads, save battery and improve performance.</string>
    <string name="_100">100</string>
    <string name="percentage_sign">%</string>
    <string name="soundmaster">SoundMaster</string>
    <string name="desc_soundmaster">Control audio output of individual apps, play on multiple outputs simultaneously, and more! </string>
    <string name="new_slider_for">Select which app to control :</string>
    <string name="no_sliders_added">No sliders added</string>
    <string name="new_slider">New Slider</string>
    <string name="removable_apps">Removable apps -</string>
    <string name="please_wait">Please wait…</string>
    <string name="welcome">Welcome!</string>
    <string name="ensure_no_adb_restrictions">Open the Shizuku app to ensure there are no warnings.</string>
    <string name="directions_lookback">Select an apk file to be installed as a downgrade.</string>
    <string name="start">Start</string>
    <string name="directions_themepatcher">Pick any premium theme / font / wallpaper from the theme store, then take a short Free Trial.</string>
    <string name="app">App</string>
    <string name="no_description">no description</string>
    <string name="stereo">Stereo:</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="eq">EQ:</string>
    <string name="low_bands">Low Bands</string>
    <string name="mid_bands">Mid Bands</string>
    <string name="high_bands">High Bands</string>
    <string name="command_getevent">getevent -q</string>
    <string name="switch_output_device">Switch Output Device:</string>
    <string name="default_">Default</string>
    <string name="run">Run</string>
    <string name="enter_command">Enter Command…</string>
    <string name="accept_adb_intents">Accept adb intents</string>
    <string name="intent_shell_security">Intent shell locks for 5 minutes after usage of a wrong access key, to prevent brute force attempts.</string>
    <string name="access_key">Access key</string>
    <string name="ok">OK</string>
    <string name="key_copied_to_clipboard">Key copied to clipboard</string>
    <string name="trial_item_detected_generating_patch">Trial item detected, generating patch..</string>
    <string name="selected_item_was_patched_as_permanent">Selected item was patched as permanent.</string>
    <string name="do_not_un_mute_apps_that_are_being_controlled_by_soundmaster">Do not un-mute apps that are being controlled by SoundMaster, while SoundMaster is running.</string>
    <string name="select_audio_output">Select Audio Output :</string>
    <string name="confirm_to_uninstall">Uninstall</string>
    <string name="links">Links :</string>
    <string name="soundmaster_initial_noti">You can now change volume to configure %1$s as well. Make sure to disable it before you power off the device.</string>
    <string name="url_uad_lists">https://cdn.jsdelivr.net/gh/Universal-Debloater-Alliance/universal-android-debloater-next-generation@main/resources/assets/uad_lists.json</string>
    <string name="none">None</string>
    <string name="permission_error">Permission error! Open the shizuku app to learn more.</string>
    <string name="shizuku_error">Shizuku Error!</string>
    <string name="universalpip">UniversalPip beta</string>
    <string name="desc_universalpip">Switch apps to picture-in-picture mode even if they don\'t allow it. May not support some launchers.</string>
    <string name="unmute_all_apps">Unmute All Apps</string>
    <string name="disable_all_mixedaudio">Disable All MixedAudio</string>
    <string name="confirm_to_disable">Disable</string>
    <string name="confirm_to_enable">Enable</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
</resources>